# automatedTesting

./: pyproject.toml
.github/workflows/: python-publish.yml
