[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_DGH"
dynamic = ["version"]
authors = [
  { name="Donatella, Gerome, Harsha ", email="DGH@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools_scm]
[project.urls]
"Homepage" = "https://github.com/HelmholtzAI-Consultants-Munich/automatedTesting"
"Bug Tracker" = "https://github.com/HelmholtzAI-Consultants-Munich/automatedTesting/issues"
